Removed the disabled button cuz that's not accessible.

--- a/pwReqTest.html
+++ b/pwReqTest.html
@@ -29,7 +29,7 @@
 					<li id="match" aria-live="polite" aria-atomic="true">Passwords must match (<span class="unmet">Unmet</span>)</li>
 				</ul>
 			</div>
-			<input value="Submit" disabled="disabled" id="submitBtn" type="button">
+			<input value="Submit" id="submitBtn" type="button">
 			
 		</div>
 		<section>
