--- a/pwReqTest.html
+++ b/pwReqTest.html
@@ -40,6 +40,7 @@
 				<li>“Met” and “Unmet” only change when the criteria becomes met, or unmet.</li>
 				<li>Each list item is like:  <code>&lt;li aria-live=”polite” artia-atomic=”true”&gt;.  <code>aria-live=”polite”</code> makes a screen reader read out the contents when there’s a change, and <code>aria-atomic=”true”</code> makes the screen reader read out the whole line, not just “met” or “unmet”.  Note that each list item needs to be its own live region.  If the whole widget is a live region, then the whole list gets read out whenever there’s a change.  You don’t want that.</li>
 			</ul>
+		</div>
 		<section>
 			<h2>Screen Reader results</h2>
 			<section>
