--- a/pwReqTest-2.html
+++ b/pwReqTest-2.html
@@ -50,20 +50,20 @@
 					<h4>NVDA 2022.1</h4>
 					<dl>
 						<dt>Firefox 100</dt>
-						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, that requirement is read out <em>twice!</em>, followed by the entire password requirements section.  Example after typing the first uppcase letter: "Bullet Uppercase letter met.  Bullet Uppercase letter met.  Your password must contain at least...."</dd>
+						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, the entire set of password requirements are read out again followed by the requirement whose status had changed. (I'm guessing it has something to do with <code>aria-describedby</code>.</dd>
 						<dt>Edge 102</dt>
-						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, that requirement is read out, followed by the entire password requirements section.  Example after typing the first uppcase letter: "Bullet Uppercase letter met. Your password must contain at least...."</dd>
+						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, the entire set of password requirements are read out again followed by the requirement whose status had changed.</dd>
 						<dt>Chrome 101</dt>
-						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, that requirement is read out, followed by the entire password requirements section.  Example after typing the first uppcase letter: "Bullet Uppercase letter met. Your password must contain at least...."</dd>
+						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, the entire set of password requirements are read out again followed by the requirement whose status had changed.</dd>
 						<dt>Internet Explorer 11</dt>
-						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, that requirement is read out, but the statuses of all requirements are read out in their initial state.  Example after typing the first uppcase letter: "bullet 1 Uppercase letter (unmet)".  Then if I delete that: "bullet 1 Uppercase letter (met)."</dd>
+						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, the entire set of password requirements are read out again followed by the requirement whose status had changed.</dd>
 					</dl>
 				</section>
 				<section>
 					<h4>JAWS 2021</h4>
 					<dl>
 						<dt>Firefox 100</dt>
-						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, the entire set of password requirements are read out again!  (I'm guessing it has something to do with <code>aria-describedby</code>.</dd>
+						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, the entire set of password requirements are read out again followed by the requirement whose status had changed. (I'm guessing it has something to do with <code>aria-describedby</code>.</dd>
 						<dt>Edge 102</dt>
 						<dd>When focus lands on the password field, all requirements are read as they should be. Then as I type a password when a met/unmet changes, the entire set of password requirements are read out again followed by the requirement whose status had changed.</dd>
 						<dt>Chrome 101</dt>
@@ -76,13 +76,13 @@
 					<h4>Narrator</h4>
 					<dl>
 						<dt>Firefox 100</dt>
-						<dd>Does not read out the requirements when focus lands on the password input.  It should.  Then it doesn't read out <em>any</em> of the criteria as they become met or unmet.  Total failure.</dd>
+						<dd>Does not read out the requirements when focus lands on the password input.  It should.  Then as you type, it does not read out the criteria as they're met/unmet. Total failure.</dd>
 						<dt>Edge 102</dt>
-						<dd>Does not read out the requirements when focus lands on the password input.  It should.  Then it gets funny.  As I type in a password, starting with a capital letter I hear "End of line selected" (at this point the blue focus indicator moves to the label of "Confirm password".) then it continues "1 uppercase letter met 3 of 6 level 1."</dd>
+						<dd>Does not read out the requirements when focus lands on the password input.  It should.  Then as you type, it does not read out the criteria as they're met/unmet.</dd>
 						<dt>Chrome 101</dt>
-						<dd>Does not read out the requirements when focus lands on the password input.  It should.  Then it only reads out the changed part, ignoring <code>aria-atomic</code>.  Example: when you type the first capital letter it reads "met closing parenthesis"</dd>
+						<dd>Does not read out the requirements when focus lands on the password input.  It should.  Then as you type, it does not read out the criteria as they're met/unmet.</dd>
 						<dt>Internet Explorer 11</dt>
-						<dd>Does not read out the requirements when focus lands on the password input.  It should.  Then as you type, it reads out the criteria as they're met/unmet.  Example: when you type the first capital letter it reads "1 uppercase letter met, 3 of 6 1 uppercase letter met closing parenthesis".</dd>
+						<dd>Does not read out the requirements when focus lands on the password input.  It should.  Then as you type, it does not read out the criteria as they're met/unmet.</dd>
 					</dl>
 				<section>
 			</section>
@@ -92,10 +92,7 @@
 					<h4>iOS v14</h4>
 					<dl>
 						<dt>Sarafi, Firefox, and Chrome</dt>
-						<dd>When focusing on the Password field, VO reads "Your password must contain at least" but doesn't read the rest.  As a password is 
-being typed, the met criteria are being read, as it should be.  Example: after typing the first uppercase letter I hear "Bullet one uppercase letter met"</dd>
-						<dt>Opera Mini</dt>
-						<dd>VoiceOver does not work with Opera Mini</dd>
+						<dd>When focusing on the Password field, VO reads all requirements as it should.  But then as a password is typed, the changes are not announced.</dd>
 					</dl>
 				</section>
 			</section>
@@ -104,23 +101,18 @@ being typed, the met criteria are being read, as it should be.  Example: after t
 				<section>
 					<h4>Mac OS X 10.15.7 (Catalina)</h4>
 					<dl>
-						<dt>Sarafi</dt>
-						<dd>VO only reads "Your password must contain at least".  It does not read the list.  As requirements are met/unmet, VO reads out the change as it should, followed by "Your password must contain at least".</dd>
-						<dt>Firefox 101</dt>
-						<dd>VO reads the password requirements as it should. As requirements are met VO reads "bullet" twice followed by the new status.  Then, sometimes, it reads the entire requirements section again.  Example after typing the first uppercase letter it reads "Bullet bullet one uppercase letter met.  Your massword must contain at least....".  Then if I type a lowercase letter it reads "Bullet bullet one lowercase letter met."</dd>
-						<dt>Chrome</dt>
-						<dd>VO reads the password requirements as it should. As requirements are met VO reads "bullet" twice followed by the new status.  Then, sometimes, it reads the entire requirements section again.  Example after typing the first uppercase letter it reads "Bullet bullet one uppercase letter met.  Your massword must contain at least....".  Then if I type a lowercase letter it reads "Bullet bullet one lowercase letter met."</dd>
+						<dt>Sarafi, Firefox 101, and Chrome</dt>
+						<dd>When focusing on the Password field, VO reads all requirements as it should.  But then as a password is typed, the changes are not announced.</dd>
 					</dl>
 				</section>	
 			</section>
 
 			<h3>Conclusion</h3>
-			<p>NVDA+Firefox or JAWS+Internet Explorer 11 work best.  NVDA+Opera and JAWS+Firefox don't work at all.  Works well enough on iOS. VoiceOver of Mac OS X 10.9.5 really only works as it should in Chrome and Opera, and almost in Firefox. Perhaps I need to upgrade my Mac OS.</p>
-			<p>UPDATED: <time>2022-06-07</time>:  It seems that when an input is <code>aria-describedby</code> a section that updates dynamically, most stacks will read out the entire described region.  Perhaps, instead of a live region, each item was separately descrbed?</p>
+			<p>In Windows it seems that whenever <em>one</em> thing changes that describes an input, all of that input's descriptors are read out again.  And on Apple systems, it's not the case.  This could be a nightmare.  The only good way I can think of doing this is having a live region that only lists what's changed, and after 1 keystroke, remove the <code>aria-describedby</code> from the input, then re-attach it on blur.</p>
 			<h3>Recommendations</h3>
 			<ol>
 				<li>It would be good to put the password requirements before the password fields rather than after.</li>
-				<li>Put <code>aria-describedby</code> in the second password field too.  That way all the "met"s and "unmet"s are read out again.</li>
+				<li>There is no good, simple way to do this.</li>
 			</ol>
 		</section>
 		<footer>
