--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta content="width=device-width,initial-scale=1" name="viewport">
     <meta charset="utf-8">
     <title>Accessible Password Requirements Home Page</title>
   </head>
   <body>
-    <h1>Accessible Password Requirement Home Page</title>
+    <h1>Accessible Password Requirement Home Page</h1>
     <p>When creating an account on a site, sometimes you have to create a password that meets certain requirements.  As you type in a password, and those requirements are met, a list of requirements may be updated dynamically.  I wanted a way to do this in an accessible manner.  This is what I came up with.</p>
+    <p>But it still needs some work.</p>
     <p><a href="https://andrewnordlund.github.io/passwordRequirements/pwReqTest.html">See it in action</a>.</p>
   </body>
 </html>
