Fixed the unment/class thing.

--- a/pwReqTest-3.html
+++ b/pwReqTest-3.html
@@ -46,6 +46,7 @@
 		</div>
 		<section>
 			<h2>Screen Reader results</h2>
+			<!--
 			<section>
 				<h3>Windows:</h3>
 				<section>
@@ -88,13 +89,14 @@
 					</dl>
 				<section>
 			</section>
+			-->
 			<section>
 				<h3>iOS with VoiceOver</h3>
 				<section>
 					<h4>iOS v14</h4>
 					<dl>
 						<dt>Sarafi, Firefox, and Chrome</dt>
-						<dd>When focusing on the Password field, VO reads all requirements as it should.  But then as a password is typed, the changes are not announced.</dd>
+						<dd>When focusing on the Password field, VO reads all requirements as it should.  And as a password is typed, the changes are announced.</dd>
 					</dl>
 				</section>
 			</section>
@@ -104,7 +106,7 @@
 					<h4>Mac OS X 10.15.7 (Catalina)</h4>
 					<dl>
 						<dt>Sarafi, Firefox 101, and Chrome</dt>
-						<dd>When focusing on the Password field, VO reads all requirements as it should.  But then as a password is typed, the changes are not announced.</dd>
+						<dd>When focusing on the Password field, VO reads all requirements as it should.  And as a password is typed, the changes are announced.</dd>
 					</dl>
 				</section>	
 			</section>
