Figured out a pesky thing where not all requirements were being added to aria-describedby on page load.

--- a/pwReqTest-3.html
+++ b/pwReqTest-3.html
@@ -20,17 +20,7 @@
 				<input name="pword2" id="pword2" type="password" class="confirmPassword" data-match="pword1">
 			</div>
 			<div id="passwordRequirements">
-				<p id="passDesc">Your password must contain at least:</p>
-			<!--
-				<ul>
-					<li id="8chars">8 characters (<span class="unmet">Unmet</span>)</li>
-					<li id="lowerCase">1 Lowercase letter (<span class="unmet">Unmet</span>)</li>
-					<li id="upperCase">1 Uppercase letter (<span class="unmet">Unmet</span>)</li>
-					<li id="specialChar">1 Special character (<span class="unmet">Unmet</span>)</li>
-					<li id="digit">1 digit (<span class="unmet">Unmet</span>)</li>
-					<li id="match">Passwords must match (<span class="unmet">Unmet</span>)</li>
-				</ul>
-				-->
+				<p id="passDesc"></p>
 			</div>
 			<input value="Submit" id="submitBtn" type="button">
 			
@@ -96,7 +86,7 @@
 					<h4>iOS v14</h4>
 					<dl>
 						<dt>Sarafi, Firefox, and Chrome</dt>
-						<dd>When focusing on the Password field, VO reads all requirements as it should.  And as a password is typed, the changes are announced.</dd>
+						<dd>When focusing on the Password field, VO reads all requirements as it should.  And as a password is typed, the changes are announced.  Full support.</dd>
 					</dl>
 				</section>
 			</section>
@@ -106,7 +96,7 @@
 					<h4>Mac OS X 10.15.7 (Catalina)</h4>
 					<dl>
 						<dt>Sarafi, Firefox 101, and Chrome</dt>
-						<dd>When focusing on the Password field, VO reads all requirements as it should.  And as a password is typed, the changes are announced.</dd>
+						<dd>When focusing on the Password field, VO reads all requirements as it should.  Andn as a password is typed, the changes are announced.  Full support.</dd>
 					</dl>
 				</section>	
 			</section>
