Added links to the working examples in the old examples.

--- a/pwReqTest-2.html
+++ b/pwReqTest-2.html
@@ -109,6 +109,7 @@
 
 			<h3>Conclusion</h3>
 			<p>In Windows it seems that whenever <em>one</em> thing changes that describes an input, all of that input's descriptors are read out again.  And on Apple systems, it's not the case.  This could be a nightmare.  The only good way I can think of doing this is having a live region that only lists what's changed, and after 1 keystroke, remove the <code>aria-describedby</code> from the input, then re-attach it on blur.</p>
+			<p>UPDATE <time>2022-06-09</time>:  I think I have finished a <a href="pwReqTest-3.html">working example</a>.</p>
 			<h3>Recommendations</h3>
 			<ol>
 				<li>It would be good to put the password requirements before the password fields rather than after.</li>
