Fixed some HTML nesting errors.

--- a/pwReqTest-3.html
+++ b/pwReqTest-3.html
@@ -63,7 +63,7 @@
 						<dt>Internet Explorer 11</dt>
 						<dd>When focusing on the Password field, JAWS reads all requirements as it should.  And as a password is typed, the changes are announced.  Furthermore, when a condition becomes met, the <code>.unmet</code> class is not removed so the word "Met" shows up in red instead of green.</dd>
 					</dl>
-				<section>
+				</section>
 				<section>
 					<h4>Narrator</h4>
 					<dl>
@@ -76,7 +76,7 @@
 						<dt>Internet Explorer 11</dt>
 						<dd>Does not read out the requirements when focus lands on the password input.  It should.  Then as you type, it does not read out the criteria as they're met/unmet.  No support.  Furthermore, when a condition becomes met, the <code>.unmet</code> class is not removed so the word "Met" shows up in red instead of green.  Total failure.</dd>
 					</dl>
-				<section>
+				</section>
 			</section>
 			<section>
 				<h3>iOS with VoiceOver</h3>
