I think I've finally got things to where they should be tested with AT.

--- a/pwReqTest-3.html
+++ b/pwReqTest-3.html
@@ -30,7 +30,7 @@
 				<h2>In English</h2>
 				<div class="fieldHolder">
 					<label for="pword1">Password:</label>
-					<input name="pword1" id="pword1" type="password" class="newPassword lowercase uppercase specialChar digit doubleChars" data-minchars="8" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn">
+					<input name="pword1" id="pword1" type="password" class="newPassword lowercase uppercase specialChar digit doubleChars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn">
 				</div>
 				<div class="fieldHolder">
 					<label for="pword2">Confirm Password:</label>
