Adding some better fonts.  hopefully this fixes Apple's thing.

--- a/pwReqTest-3.html
+++ b/pwReqTest-3.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<title>Password Requirements Test Page</title>
+		<link rel="Stylesheet" type="text/css" href="glyphs.css">
 		<link rel="Stylesheet" type="text/css" href="pwReqTest.css">
 		<script src="pwReqTest-3.js"></script>
 	</head>
